--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
 		<p>单一票制1元，持卡乘车普通卡0.4元／次，学生卡0.2元／次</p>
 		<!-- 下面这个是箭头 -->
 		<div>
-			<span></span>
+			<div>
+				<!-- 这个div为后面的三角形 -->
+			</div>
 		</div>
-
 	</div>
 </div>
 	
